infra/local-test/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zmnnoory
  labels:
    name: zmnnoory
    environment: production
    app: spring-boot-backend
